Implement Account & Post API

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <span onclick="document.querySelector('.banner').remove()">&times;</div>
   <div id="pageContent">
   </div>
+  <script src="pagetypes.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
