--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   <!-- Page content -->
   <div id="pageContent">
   </div>
+  <!-- Version -->
+  <span id="version"></span>
   <!-- Blank modal to be triggered -->
   <div id="myModal" class="modal">
     <div class="modal-content">
@@ -38,7 +40,9 @@
   </div>
   <!-- Insert all page scripts -->
   <script src="humanized-time-span.js"></script>
+  <script src="communityArray.js"></script>
   <script src="pagetypes.js"></script>
+  <script src="console.js"></script>
   <script src="script.js"></script>
 
   <!-- Beta script -->
