--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   <script src="scripts/navbar.js"></script>
   <script src="scripts/moment.js"></script>
   <script src="scripts/themes.js"></script>
+  <script src="scripts/image.js"></script>
   <script src="scripts/main.js"></script>
   <script src="featured.js"></script>
 </body>
