Adjustments, explore page rebuild, about finish + easter egg to top it off

--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
   <script src="scripts/themes.js"></script>
   <script src="scripts/image.js"></script>
   <script src="scripts/main.js"></script>
-  <script src="featured.js"></script>
+  <script src="exploredata.js"></script>
 </body>
 </html>
