--- a/admin/index.html
+++ b/admin/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Tickets - RiverBox</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="icon" type="image/x-icon" href="assets/logo.png">
+  <link href="/style.css" rel="stylesheet" type="text/css" />
+  <link rel="icon" type="image/x-icon" href="/assets/logo.png">
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 </head>
@@ -25,9 +25,9 @@
     </div>
   </div>
   <!-- Administrator scripts -->
-  <script src="scripts/pagetypes.js"></script>
-  <script src="scripts/navbar.js"></script>
-  <script src="scripts/admin.js"></script>
-  <script src="scripts/mdls.js"></script>
+  <script src="/scripts/pagetypes.js"></script>
+  <script src="/scripts/navbar.js"></script>
+  <script src="/scripts/mdls.js"></script>
+  <script src="admin.js"></script>
 </body>
 </html>
