even more bgufix

--- a/admin/index.html
+++ b/admin/index.html
@@ -25,9 +25,9 @@
     </div>
   </div>
   <!-- Administrator scripts -->
-  <script src="/scripts/pagetypes.js"></script>
-  <script src="/scripts/navbar.js"></script>
-  <script src="/scripts/mdls.js"></script>
+  <script src="../scripts/pagetypes.js"></script>
+  <script src="../scripts/navbar.js"></script>
+  <script src="../scripts/mdls.js"></script>
   <script src="admin.js"></script>
 </body>
 </html>
