--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
         }
         closeModal();
     }
-    
-    function dispatchState(newstate) {
-      state = newstate;
-      state.origin = false;
-      computeLoginData(state.session);
-    }
+
+    setTimeout(function(){
+      if (localStorage.getItem("lgbtq") == null) {
+        modal('lgbtq');
+        localStorage.setItem("lgbtq", true); // switch to BLM in 1.6
+      }
+    }, 2000)
   </script>
 </head>
 <body>
@@ -57,7 +58,6 @@
   <script src="scripts/shuffle.js"></script>
   <script src="scripts/navbar.js"></script>
   <script src="scripts/moment.js"></script>
-  <script src="scripts/themes.js"></script>
   <script src="scripts/image.js"></script>
   <script src="scripts/main.js"></script>
   <script src="scripts/mdls.js"></script>
